[Bugfix] Phone number color on mobile

--- a/src/style/components/_footer.scss
+++ b/src/style/components/_footer.scss
@@ -122,7 +122,9 @@ footer {
     margin: auto;
 
     .phone-number {
-      color: black;
+      a[href^=tel] {
+        color: black;
+      }
     }
 
     .open-hours {
